--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ button {
 }
 
 .cell {
-    width: calc(100% / 10);
+    /* width: calc(100% / 10); */
     aspect-ratio: 1 / 1;
     display: flex;
     justify-content: center;
